--- a/classroom/nguyenduykhanh/miniChef/miniChefjQuery/mini16.05.html
+++ b/classroom/nguyenduykhanh/miniChef/miniChefjQuery/mini16.05.html
@@ -15,8 +15,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript">
      // đổi link sang http://vnexpress.net và nội dung sang Xem tin lá cải.
-        var newUrl = 'http://vnexpress.net ';
-        var myP = "xem bao la cai"
+        var newUrl = 'http://vnexpress.net';
+        var myP = "xem bao la cai";
         $("a").text(myP);
         $('a[href="www.w3resource.com/sqlite/"]').attr('href', newUrl);
 
