--- a/classroom/haconglinh/homeWork4-Lab15-LazyLoadFake/lazyload.html
+++ b/classroom/haconglinh/homeWork4-Lab15-LazyLoadFake/lazyload.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Lazy Load</title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="bootstrap.min.css">
-    <script src="bootstrap.min.js"></script>
-    <script src="jquery.min.js"></script>
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,7 +25,7 @@
 
     <div class="container" id="divTable">
 
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -25,22 +33,7 @@
                     <th>Email</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>22</td>
-                    <td>john@example.com</td>
-                </tr>
-                <tr>
-                    <td>Mary</td>
-                    <td>22</td>
-                    <td>mary@example.com</td>
-                </tr>
-                <tr>
-                    <td>July</td>
-                    <td>22</td>
-                    <td>july@example.com</td>
-                </tr>
+            <tbody id="tbody">
             </tbody>
         </table>
     </div>
@@ -48,9 +41,11 @@
 
 
     <div class="boxBtn">
-        <button class="btn btn-success btn-lg" onclick="lazyLoad()">Load More</button>
+        <button class="btn btn-success btn-lg" onclick="lazyLoad()">Load Random More Data</button>
     </div>
 
+    <script src="bootstrap.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script type="text/javascript" src="data.json"></script>
     <script type="text/javascript" src="script.js"></script>
 
