--- a/classroom/nguyenduykhanh/jquery_exercises-master/ex02.html
+++ b/classroom/nguyenduykhanh/jquery_exercises-master/ex02.html
@@ -18,7 +18,7 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas venenatis venenatis ornare. Fusce sit amet sapien sit amet orci lacinia ullamcorper. In hac habitasse platea dictumst. In non orci arcu. Nunc non felis a urna viverra ullamcorper eget sed lorem. Cras mauris diam, suscipit et malesuada in, adipiscing volutpat tortor.</p>
 
 
-<div id="">
+<div id="photos">
 <img class="fadeitem" src="images/vancouver1.jpg">
 <img class="fadeitem" src="images/vancouver2.jpg">
 <img class="fadeitem" src="images/vancouver3.jpg">
