--- a/classroom/nguyenduykhanh/jquery_exercises-master/ex01.html
+++ b/classroom/nguyenduykhanh/jquery_exercises-master/ex01.html
@@ -18,9 +18,10 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas venenatis venenatis ornare. Fusce sit amet sapien sit amet orci lacinia ullamcorper. In hac habitasse platea dictumst. In non orci arcu. Nunc non felis a urna viverra ullamcorper eget sed lorem. Cras mauris diam, suscipit et malesuada in, adipiscing volutpat tortor.</p>
 
 
-<div class="pushy fadeitem">
-<p class="words">Roll Over Me</p>
-</div>
+
+<img src="images/vancouver1.jpg" alt="" width="400px" height="350px" class="vancouver">
+
+
 
 
 <p>Etiam et cursus quam. Phasellus ornare felis sed magna luctus nec pellentesque lacus tincidunt. Ut mauris eros, fringilla id placerat ac, pulvinar ut quam. Praesent eu diam nec magna volutpat semper vel nec neque. Aenean rhoncus commodo erat, a ultrices lorem pretium nec. Phasellus nunc tellus, suscipit sit amet dictum sed, sodales ut odio.</p>
