Add Mini Chief 1604

--- a/classroom/haconglinh/Mini Chief/Mini 1604/chief.html
+++ b/classroom/haconglinh/Mini Chief/Mini 1604/chief.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
+    <ui>
+        <li>Html Tutorial</li>
+        <li>Mongodb Tutorial</li>
+        <li>Python Tutorial</li>
 
-    <select name="" id="myselect">
-        <option value="1">Option- 1</option>
-        <option value="2">Option- 2</option>
-        <option value="3">Option- 3</option>
-    </select>
-    <h1 id="result"></h1>
+    </ui>
+
+
 
 
     <script src="jquery.min.js"></script>
