--- a/classroom/nguyenduykhanh/jQuery/jForm/form.html
+++ b/classroom/nguyenduykhanh/jQuery/jForm/form.html
@@ -23,7 +23,7 @@
 	<div class="container">
         <form action="" id="myForm" name="mainForm">
 
-          <h2>Your jouney starts from here</h2>
+          <h2>Your journey starts from here</h2>
         <div class="ePass">
                     <!--     THIS IS EMAIL       -->
            <div class="emailSection">
@@ -65,6 +65,8 @@
 
         </form>
 	</div>
+
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js">
