--- a/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/index.html
+++ b/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/index.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Lazy Load</title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!--    Link Bootstrap CDN-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <!--    Link Style CSS-->
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="bootstrap.min.css">
+
     <link rel="stylesheet" href="style.css">
 
 </head>
