--- a/classroom/nguyenduykhanh/jQuery/jForm/form.html
+++ b/classroom/nguyenduykhanh/jQuery/jForm/form.html
@@ -21,7 +21,7 @@
 <body>
 
 	<div class="container">
-        <form action="" id="myForm" name="mainForm">
+        <form id="myForm" name="mainForm" method="post">
 
           <h2>Your journey starts from here</h2>
         <div class="ePass">
@@ -60,7 +60,7 @@
 
         <!--   THIS IS BUTTON -->
            <div class="RegisSection">
-               <input type="button" class="button" id="Register" value="Let's rock it" onclick="savings()">
+               <input type="submit" class="button" id="Register" value="Let's rock it">
            </div>
 
         </form>
