complete header neopost

--- a/classroom/nguyenduykhanh/Clone/neopost/neo.html
+++ b/classroom/nguyenduykhanh/Clone/neopost/neo.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+
+	<link rel="stylesheet" href="cssreset.css">
+	<link rel="stylesheet" href="neo.css">
 
 	<title>Neo Post</title>
 
@@ -18,31 +22,72 @@
 
 <body>
 
-	<div class="container">
+
     <!-- HEADER -->
         <div class="header">
-    <!-- NAV-->
-           <div>
+            <h1>neopost</h1>
+            <p>Online Shipping Service</p>
+            <p>States</p>
+            <div class="line"></div>
+            <p>You are logged as: <span style="font-weight: 700;">NissAdmin</span> <span class="logoff">Log off</span></p>
 
+
+    <!-- NAV-->
+              <div class="myNav">
+                <ul>
+                    <li><a href="#">Customer <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                    <li><a href="#">Repositories <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                    <li><a href="#">Shipping <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                    <li><a href="#">Shipment <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                    <li><a href="#">Carrier <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                    <li><a href="#">Admin <i class="fa fa-caret-down" aria-hidden="true"></i>
+</a></li>
+                </ul>
            </div>
         </div>
 
+
+    <h3>Manage States</h3>
     <!-- FILTERING -->
-        <div></div>
+        <div class="filter">
+
+        </div>
 
     <!-- TABLE    -->
-        <div></div>
+        <div class="mainTable">
+
+        </div>
     <!-- CREATE    -->
-        <div></div>
+        <div class="creation">
+
+        </div>
+
+    <!-- IMPORT-->
+        <div class="import">
+
+        </div>
+    <!-- EXPORT   -->
+        <div class="export">
+
+        </div>
 
     <!-- FOOTER -->
-         <div></div>
-	 </div>
+
+           <footer>
+
+           </footer>
+
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-	<script>
+	<script src="neo.js">
 	</script>
 
 </body>
