--- a/classroom/nguyenduykhanh/jQuery/jForm/form.html
+++ b/classroom/nguyenduykhanh/jQuery/jForm/form.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
 
     <link rel="stylesheet" href="form.css">
-    <title>Minimum Bootstrap HTML Skeleton</title>
+    <title>Hero in the Gay</title>
 
     <!--  -->
 
