--- a/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/udemy.html
+++ b/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/udemy.html
@@ -107,7 +107,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <button type="button" value="login" name="submit" class="btn btn-success btn-block" onclick="login()">Login</button>
+                                                <button id="btnLogin" type="button" value="login" name="submit" class="btn btn-success btn-block" >Login</button>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -138,15 +138,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/eb1e7b643e.js"></script>
-
-
-    <script>
-        $(document).ready(function() {
-            $('.carousel').carousel({
-                interval: 1000
-            });
-        });
-    </script>
 
     <script src="md5.min.js"></script>
     <script src="script.js"></script>
