--- a/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/index.html
+++ b/classroom/haconglinh/homeWork6-Lab17-RegisterFormWithJquery/index.html
@@ -29,33 +29,39 @@
                 <div class="form-group" id="formUserName">
                     <label class="col-md-4 control-label" for="userName">User Name</label>
                     <div class="col-md-4">
-                        <input id="userName" name="userName" type="text" placeholder="User Name must have more than 6 character !!!" class="form-control input-md" required="" onblur="validUserName(this)">
+                        <input id="userName" name="userName" type="text" placeholder="User Name must have more than 6 character !!!" class="form-control input-md" required="">
                     </div>
+
+                    <h5 class="col-md-4 alert" id="wrongUserName">Wrong User Name Syntax !</h5>
+
                 </div>
 
                 <!-- Text input-->
                 <div class="form-group" id="formEmail">
                     <label class="col-md-4 control-label" for="email">Email</label>
                     <div class="col-md-4">
-                        <input id="email" name="email" type="text" placeholder="Email must have nomal character, &quot;@&quot; and &quot;.&quot; key word !!!" class="form-control input-md" required="" onblur="validEmail(this)">
+                        <input id="email" name="email" type="text" placeholder="Email must have nomal character, &quot;@&quot; and &quot;.&quot; key word !!!" class="form-control input-md" required="">
 
                     </div>
+                    <h5 class="col-md-4 alert" id="wrongEmail">Wrong Email Syntax !</h5>
                 </div>
 
                 <!-- Password input-->
                 <div class="form-group" id="formPassword">
                     <label class="col-md-4 control-label" for="password">Password</label>
                     <div class="col-md-4">
-                        <input id="password" name="password" type="password" placeholder="Password must have at least 1 digit, 1 special character, 1 lower case and 1 upper case !!!" class="form-control input-md" required="" onblur="validPassword(this)">
+                        <input id="password" name="password" type="password" placeholder="Password must have at least 1 digit, 1 special character, 1 lower case and 1 upper case !!!" class="form-control input-md" required="">
                     </div>
+                    <h5 class="col-md-4 alert" id="wrongPassword">Wrong Password Syntax !</h5>
                 </div>
 
                 <!-- Password input-->
                 <div class="form-group" id="formRePassword">
                     <label class="col-md-4 control-label" for="rePassword">Re-Password</label>
                     <div class="col-md-4">
-                        <input id="rePassword" name="rePassword" type="password" placeholder="Two password must the same !!!" class="form-control input-md" required="" onblur="validRePassword(this)">
+                        <input id="rePassword" name="rePassword" type="password" placeholder="Two password must the same !!!" class="form-control input-md" required="">
                     </div>
+                    <h5 class="col-md-4 alert" id="wrongRePassword">Two Password are not the same</h5>
                 </div>
 
                 <!-- Multiple Radios (inline) -->
@@ -110,7 +116,7 @@
 
                 <!-- Button -->
                 <div class="boxBtn col-sm-offset-5 col-sm-2 ">
-                    <button id="register" name="register" type="submit" class="btn btn-success btn-lg btn-block " onclick="register()"> Register </button>
+                    <button id="register" name="register" type="submit" class="btn btn-success btn-lg btn-block "> Register </button>
                 </div>
 
 
