--- a/classroom/haconglinh/homeWork8-Lab19-SliderUdemy/index.html
+++ b/classroom/haconglinh/homeWork8-Lab19-SliderUdemy/index.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-xs-12 twentytwenty-container" id="slider">
                     <h2 id='title'>Mai Phương Thúy hay Happy Pola !!!</h1>
-                    <img src="images/maiphuongthuy.jpg" alt="">
+                    <img src="images/maiphuongthuy2.jpg" alt="">
                     <img src="images/pola.jpg" alt="">
                 </div>
             </div>
@@ -40,6 +40,7 @@
     <!--    Link Java Script-->
     <script src="js/script.js"></script>
     <script src="js/jquery.twentytwenty.js"></script>
+    <script src="js/jquery.event.move.js"></script>
 
 </body>
 
