--- a/classroom/haconglinh/homeWork8-Lab19-SliderUdemyAndTypeHead/index.html
+++ b/classroom/haconglinh/homeWork8-Lab19-SliderUdemyAndTypeHead/index.html
@@ -19,28 +19,26 @@
 
 <body>
 
-
-
-
     <div class="container">
-        <div class="jumbotron text-center">
-            <div class="row">
-                <div class="col-xs-12 twentytwenty-container" id="slider">
-                    <h2 id='title'>Mai Phương Thúy hay Happy Pola !!!</h1>
-                    <img src="images/maiphuongthuy2.jpg" alt="">
-                    <img src="images/pola.jpg" alt="">
-                </div>
-            </div>
+        <div class="col-xs-12 twentytwenty-container" id="slider">
+            <img src="images/maiphuongthuy2.jpg" alt="">
+            <img src="images/pola.jpg" alt="">
         </div>
 
-
+        <div class="form-group">
+            <div class="col-xs-4" id="the-basics">
+                <input type="text" class="typeahead form-control" placeholder="Stage of USA">
+            </div>
+        </div>
 
     </div>
 
     <!--    Link Java Script-->
+    <script src="js/typeahead.js"></script>
     <script src="js/script.js"></script>
     <script src="js/jquery.twentytwenty.js"></script>
     <script src="js/jquery.event.move.js"></script>
+
 
 </body>
 
