--- a/classroom/hoang.phan/bontraxclone/users.html
+++ b/classroom/hoang.phan/bontraxclone/users.html
@@ -29,9 +29,9 @@
 <div class="wrapper">
 
   <!-- main header embeded -->
-  <object type="text/html" data="_main.header.html"></object>
-  <!--<div w3-include-html="_main.header.html"></div>-->
-  
+  <header class="main-header html-embeded" data="_main.header.html">
+  </header>  
+    
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
@@ -539,11 +539,9 @@
 <!-- FastClick -->
 <script src="./plugins/fastclick/fastclick.js"></script>
 <!-- AdminLTE App -->
-<script src="./dist/js/app.min.js"></script>
+<script src="./dist/js/app.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="./dist/js/demo.js"></script>
-  
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
 
 </body>
 </html>
