--- a/classroom/haconglinh/homeWork10-Lab25-Slicing Reperio/index.html
+++ b/classroom/haconglinh/homeWork10-Lab25-Slicing Reperio/index.html
@@ -62,20 +62,22 @@
     <!--    Main Content-->
     <div id="main-content" >
         <div class="container">
-            <div class="row" id="">
+            <div class="row" id="form-row">
 
                 <!--           Title wellcome-->
-                <div class="col-md-4" id="div-wellcome">
+                <div class="col-md-3" id="div-wellcome">
+                
+                    <h4 id="welcome-text">WELCOME,</h4>
 
                 </div>
 
                 <!--            Form Reperio-->
-                <div class="col-md-4" id="form-reperio">
+                <div class="col-md-3" id="form-reperio">
 
                 </div>
 
                 <!--            Form Register-->
-                <div class="col-md-4" id="form-register">
+                <div class="col-md-3" id="form-register">
 
                 </div>
             </div>
